--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
         <div class="row justify-content-center">
             <div class="col-md-8 col-lg-6">
                 <div class="contact-form">
-                    <form id="contactForm" action="https://formspree.io/f/mgvkekre" method="POST">
+                    <form id="contactForm" action="https://formspree.io/f/mqaqkqnn" method="POST">
                         <div class="form-group">
                             <label for="nombre">Nombre:</label>
                             <input type="text" class="form-control" id="nombre" name="nombre" required>
@@ -520,7 +520,7 @@
         const formMessage = document.getElementById('form-message'); // Elemento para mostrar mensajes
 
         // Reemplaza 'TU_ENDPOINT_DE_FORMSPREE_AQUÍ' con el endpoint que obtengas de Formspree
-        const formspreeEndpoint = "https://formspree.io/f/mgvkekre"; // <-- ¡IMPORTANTE! Reemplaza esto
+        const formspreeEndpoint = "https://formspree.io/f/mqaqkqnn"; // <-- ¡IMPORTANTE! Reemplaza esto
 
         form.addEventListener('submit', async function(event) {
             event.preventDefault(); // Previene la recarga de la página
