--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
     </section>
 
     <footer class="text-center">
-        Contacto: 📞 3364666718 | 📧 Limpieza360@gmail.com
+        Contacto: 📞 3364666718 | 📧 limpiando360@gmail.com
         <div class="text-center mt-3">
             <a class="btn presupuesto-btn btn-lg" href="tel:3364666718">📲 Pedí tu presupuesto al 3364666718</a>
         </div>
